--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <p id="msg" >Winner</p>
         <button id="new">New Game</button>
     </div>
-    <div class="player">
-        <p id="p1"></p>
-        <p id="p2"></p>
-    </div>
     <main>
         <h1>Tic-Tac-Toe</h1>
+        <div class="player">
+            <p id="p1">ASRU</p>
+            <p id="p2">ASRU</p>
+        </div>
         <div class="container">
             <div class="game">
                 <button class="box"></button>
